[package]
name = "xgboost-rs-sys"
version = "0.1.2"
links = "xgboost"
build = "build.rs"
license = "MIT OR Apache-2.0"
description = "Native bindings to the xgboost library"
authors = ["Marcus Weber <marcus.wallau@gmail.com>"]
repository = "https://github.com/MarWeUMR/xgboost-rs-sys"

edition = "2021"

[lib]
name = "xgboost_rs_sys"
path = "lib.rs"

[dependencies]
libc = "0.2.135"

[build-dependencies]
bindgen = "0.60.1"
cmake = "0.1"
